Cambiar título del sitio a DARK_NEKO en la navegación superior

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Abel Guzmán - Academic CV
+title: DARK_NEKO
 # Website URL
 baseURL: 'https://abelguzman1.github.io/darkneko.github.io/'
 
