Traducir sitio completo al español: menús, páginas, configuración e idioma por defecto

--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,22 +1,20 @@
 # Languages
 #   Create a section for each of your site's languages.
 #   Documentation: https://docs.hugoblox.com/reference/language/
-
 # Default language
-en:
-  languageCode: en-us
-  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
-  #contentDir: content/en
-
+es:
+  languageCode: es-ES
+  # Uncomment for multi-lingual sites, and move English content into `es` sub-folder.
+  #contentDir: content/es
 # Uncomment the lines below to configure your website in a second language.
-#zh:
-#  languageCode: zh-Hans
-#  contentDir: content/zh
-#  title: Chinese website title...
+#en:
+#  languageCode: en-US
+#  contentDir: content/en
+#  title: English website title...
 #  params:
-#    description: Site description in Chinese...
+#    description: Site description in English...
 #  menu:
 #    main:
-#      - name: 传
+#      - name: Bio
 #        url: '#about'
 #        weight: 1
