--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website.'
+    description: 'Sitio web académico personal de Abel Elías Guzmán Del Orbe, Tecnólogo en Desarrollo de Software del ITLA.'
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
