--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,26 +2,25 @@
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
   #     desired widget in your `content/home/` folder.
   #   The weight parameter defines the order that the links will appear in.
-
 main:
-  - name: Bio
+  - name: Biografía
     url: /
     weight: 10
-  - name: Papers
+  - name: Publicaciones
     url: /#papers
     weight: 11
-  - name: Talks
+  - name: Charlas
     url: /#talks
     weight: 12
-  - name: News
+  - name: Noticias
     url: /#news
     weight: 13
-  - name: Experience
+  - name: Experiencia
     url: experience/
     weight: 20
-  - name: Projects
+  - name: Proyectos
     url: projects/
     weight: 30
-  - name: Teaching
+  - name: Enseñanza
     url: teaching/
     weight: 40
