--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -12,7 +12,7 @@ baseURL: 'https://abelguzman1.github.io/darkneko.github.io/'
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: es
+defaultContentLanguage: en
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
