--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -40,7 +40,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: 'Â© {year} Me. This work is licensed under {license}'
+    notice: ' {year} Abel Elías Guzmán Del Orbe. Este trabajo está licenciado bajo {license}'
     license:
       enable: true
       allow_derivatives: false
