CORREGIR: baseURL para GitHub Pages - eliminar subdirectorio innecesario

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: DARK_NEKO
 # Website URL
-baseURL: 'https://abelguzman1.github.io/darkneko.github.io/'
+baseURL: 'https://abelguzman1.github.io/'
 
 ############################
 ## LANGUAGE
