--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,32 +1,24 @@
-﻿name: Deploy website to GitHub Pages
+﻿name: Deploy Hugo site to Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allow manual trigger
+    branches: ["main"]
   workflow_dispatch:
 
-# Grant GITHUB_TOKEN the permissions required to make a Pages deployment
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
-# Default to bash
 defaults:
   run:
     shell: bash
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     env:
@@ -34,10 +26,10 @@ jobs:
     steps:
       - name: Install Hugo CLI
         run: |
-          wget -O hugo_extended_${{ env.HUGO_VERSION }}_linux-amd64.tar.gz https://github.com/gohugoio/hugo/releases/download/v${{ env.HUGO_VERSION }}/hugo_extended_${{ env.HUGO_VERSION }}_linux-amd64.tar.gz
-          tar -xzf hugo_extended_${{ env.HUGO_VERSION }}_linux-amd64.tar.gz
+          wget -O hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
+          tar -xzf hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
           sudo install hugo /usr/local/bin/
-
+          
       - name: Install Dart Sass
         run: sudo snap install dart-sass
 
@@ -45,6 +37,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          fetch-depth: 0
 
       - name: Setup Pages
         id: pages
@@ -55,11 +48,11 @@ jobs:
 
       - name: Build with Hugo
         env:
-          # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
           hugo \
+            --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
 
@@ -68,7 +61,6 @@ jobs:
         with:
           path: ./public
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
